[gd_scene load_steps=6 format=3 uid="uid://bf7edqxk0045j"]

[ext_resource type="Script" path="res://Menu.gd" id="1_o7cgg"]
[ext_resource type="AudioStream" uid="uid://cip3whlrcxack" path="res://Assets/buttonpress.wav" id="2_nti63"]
[ext_resource type="Texture2D" uid="uid://bgowtd6c7poka" path="res://Assets/Title.png" id="3_kh426"]
[ext_resource type="FontFile" uid="uid://dst78fk5i715l" path="res://Assets/PixelAE-Regular.ttf" id="4_yrrcn"]

[sub_resource type="Theme" id="Theme_mg6o2"]

[node name="Menu" type="Node2D"]
texture_filter = 1
script = ExtResource("1_o7cgg")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1200.0
offset_bottom = 677.0
color = Color(0.0196078, 0.0313726, 0.0980392, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 350.0
offset_top = 350.0
offset_right = 850.0
offset_bottom = 450.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Button" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_nti63")
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(600, 200)
texture = ExtResource("3_kh426")

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Start" type="Button" parent="."]
offset_left = 400.0
offset_top = 350.0
offset_right = 800.0
offset_bottom = 390.0
theme = SubResource("Theme_mg6o2")
theme_override_fonts/font = ExtResource("4_yrrcn")
text = "Start
"

[node name="ContinuefromSave" type="Button" parent="."]
offset_left = 400.0
offset_top = 400.0
offset_right = 800.0
offset_bottom = 440.0
theme_override_fonts/font = ExtResource("4_yrrcn")
text = "Continue"

[node name="LevelSelect" type="Button" parent="."]
offset_left = 400.0
offset_top = 450.0
offset_right = 800.0
offset_bottom = 490.0
theme_override_fonts/font = ExtResource("4_yrrcn")
text = "Level Select"

[node name="Options" type="Button" parent="."]
offset_left = 400.0
offset_top = 500.0
offset_right = 800.0
offset_bottom = 540.0
theme_override_fonts/font = ExtResource("4_yrrcn")
text = "Options
"

[node name="Quit" type="Button" parent="."]
offset_left = 400.0
offset_top = 550.0
offset_right = 800.0
offset_bottom = 590.0
theme_override_fonts/font = ExtResource("4_yrrcn")
text = "Quit
"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ContinuefromSave" to="." method="_on_continuefrom_save_pressed"]
[connection signal="pressed" from="LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
